--- a/css/styles.css
+++ b/css/styles.css
@@ -102,12 +102,18 @@ nav {
   transition: 0.4s;
   margin-top: 0;
 }
+.collapse__top--change {
+  transform: rotate(-45deg) translate(-12px, 7px);
+}
 .collapse__middle {
   background: #fff;
   height: 5px;
   width: 100%;
   transition: 0.4s;
   margin-top: 7px;
+}
+.collapse__middle--change {
+  opacity: 0;
 }
 .collapse__bottom {
   background: #fff;
@@ -116,13 +122,7 @@ nav {
   transition: 0.4s;
   margin-top: 7px;
 }
-.change .collapse__top {
-  transform: rotate(-45deg) translate(-12px, 7px);
-}
-.change .collapse__middle {
-  opacity: 0;
-}
-.change .collapse__bottom {
+.collapse__bottom--change {
   transform: rotate(45deg) translate(-10px, -5px);
 }
 
